# Cap

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  codecov.yml  diff-clang-format.py  indent  requirements.readthedocs.txt
cpp/: CMakeLists.txt
cpp/example/: CMakeLists.txt  scaling.cc  super_capacitor.info
cpp/source/: CMakeLists.txt  boundary_values.cc  boundary_values.h  boundary_values.templates.h  default_inspector.cc  default_inspector.h  dirichlet_boundary_operator.h  dof_extractor.cc  dof_extractor.h  dof_extractor.templates.h  electrochemical_impedance_spectroscopy.cc  electrochemical_impedance_spectroscopy.h  electrochemical_operator.cc  electrochemical_operator.h  electrochemical_operator.templates.h  energy_storage_device.cc  energy_storage_device.h  equivalent_circuit.cc  equivalent_circuit.h  geometry.cc  geometry.h  geometry.templates.h  mp_values.cc  mp_values.h  mp_values.templates.h  operator.cc  operator.h  operator.templates.h  physics.cc  physics.h  physics.templates.h  post_processor.cc  post_processor.h  post_processor.templates.h  resistor_capacitor.cc  resistor_capacitor.h  supercapacitor.cc  supercapacitor.h  supercapacitor.templates.h  thermal_operator.cc  (+9 more)
cpp/test/: CMakeLists.txt  convergence_charge.cc  convergence_discharge.cc  main.cc  test_butler_volmer_kinetics.cc  test_charge_curve.cc  test_checkpoint_restart.cc  test_cyclic_voltammetry.cc  test_dirichlet_boundary_operator.cc  test_discharge_curve.cc  test_discrete_fourier_transform.cc  test_distributed_energy_storage.cc  test_energy_storage_device.cc  test_equivalent_circuit-2.cc  test_equivalent_circuit.cc  test_exact_transient_solution-2.cc  test_exact_transient_solution.cc  test_exact_transient_solution_new_supercapacitor-2.cc  test_exact_transient_solution_new_supercapacitor.cc  test_geometry.cc  test_impedance_spectroscopy-2.cc  test_impedance_spectroscopy.cc  test_leakage_current.cc  test_lissajous_curve.cc  test_mp_values.cc  test_multi_stage.cc  test_new_supercapacitor.cc  test_parse_params.cc  test_postprocessor.cc  test_ragone_chart-2.cc  test_ragone_chart.cc  test_resistor_capacitor_circuit-2.cc  test_resistor_capacitor_circuit.cc  test_supercapacitor.cc  test_supercapacitor_2d_vs_3d.cc  test_supercapacitor_inspector.cc  test_three_dim_supercapacitor.cc  test_timer.cc  test_uq_eis.cc
doc/: CMakeLists.txt  doc.tex  mybib.bib
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  cheat_sheet.md
docs/source/: acknowledgments.rst  appendix.rst  battery.rst  conf.py  cyclic_charge_discharge.rst  cyclic_voltammetry.rst  electrochemical_impedance_spectroscopy.rst  electrochemical_techniques.rst  energy_storage_devices.rst  equivalent_circuits.rst  examples.rst  faq.rst  index.rst  install.rst  overview.md  overview.rst  parallel_rc.xml  python_wrappers.rst  reference.rst  series_rc.xml  super_capacitor.rst  super_capacitor.xml  verbrugge.rst
python/: CMakeLists.txt  __init__.py  extra.py  python_wrappers.cc  test_python_wrappers.py
python/data/: device.xml
python/example/: CompareImpedanceSectra.ipynb  EffectsOfInhomogeneitiesOnEIS.ipynb  Maxwell electrodes with TEABF4 electrolyte at open circuit coin cell.csv  helpers.py  impedance_spectroscopy.info  super_capacitor.info
python/source/: CMakeLists.txt  __init__.py  charge_discharge.py  data_helpers.py  end_criterion.py  energy_storage_device_wrappers.cc  energy_storage_device_wrappers.h  extra.py  impedance_spectroscopy.py  observer_pattern.py  peak_detection.py  property_tree_wrappers.cc  property_tree_wrappers.h  python_wrappers.cc  ragone_chart.py  ragone_plot.py  stage.py  time_evolution.py  voltammetry.py
python/test/: CMakeLists.txt  test_charge_discharge.py  test_end_criterion.py  test_energy_storage_device_wrappers.py  test_impedance_spectroscopy.py  test_observer_pattern.py  test_property_tree.py  test_property_tree_wrappers.py  test_python_wrappers.py  test_ragone_chart.py  test_ragone_plot.py  test_stage.py  test_time_evolution.py  test_voltammetry.py
source/: CMakeLists.txt  boundary_values.cc  boundary_values.h  boundary_values.templates.h  dirichlet_boundary_operator.h  dof_extractor.cc  dof_extractor.h  dof_extractor.templates.h  electrochemical_impedance_spectroscopy.cc  electrochemical_operator.cc  electrochemical_operator.h  electrochemical_operator.templates.h  energy_storage_device.cc  energy_storage_device.h  equivalent_circuit.cc  equivalent_circuit.h  geometry.cc  geometry.h  geometry.templates.h  mp_values.cc  mp_values.h  mp_values.templates.h  operator.cc  operator.h  operator.templates.h  post_processor.cc  resistor_capacitor.cc  resistor_capacitor.h  super_capacitor.cc  super_capacitor.h  super_capacitor.templates.h  supercapacitor.cc  supercapacitor.h  supercapacitor.templates.h  thermal_operator.cc  thermal_operator.h  thermal_operator.templates.h  utils.cc  utils.h  utils.templates.h
test/: CMakeLists.txt  common.cc  test_butler_volmer_kinetics.cc  test_charge_curve.cc  test_constant_current_charge_constant_voltage_discharge.cc  test_constant_current_cycling.cc  test_cyclic_charge_discharge.cc  test_cyclic_voltammetry.cc  test_dirichlet_boundary_operator.cc  test_discharge_curve.cc  test_discrete_fourier_transform.cc  test_drivers.cc  test_energy_storage_device.cc  test_equivalent_circuit-2.cc  test_equivalent_circuit.cc  test_exact_transient_solution-2.cc  test_exact_transient_solution.cc  test_geometry.cc  test_impedance_spectroscopy-2.cc  test_impedance_spectroscopy.cc  test_leakage_current.cc  test_lissajous_curve.cc  test_mp_values.cc  test_multi_stage.cc  test_no_name.cc  test_parse_params.cc  test_postprocessor.cc  test_ragone_chart-2.cc  test_ragone_chart.cc  test_ragone_plot.cc  test_resistor_capacitor_circuit-2.cc  test_resistor_capacitor_circuit.cc  test_supercapacitor.cc  test_uq_eis.cc
test/cmake/: macros.cmake
test/data/: input_butler_volmer_kinetics  input_charge_curve  input_cyclic_charge_discharge  input_cyclic_voltammetry  input_discharge_curve  input_equivalent_circuit  input_impedance_spectroscopy  input_leakage_current  (+11 more)
(+158 files in other folders)
