CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(Cap_MAJOR_VERSION 0)
SET(Cap_MINOR_VERSION 1)
SET(Cap_PATCH_VERSION 0)
SET(Cap_VERSION
    ${Cap_MAJOR_VERSION}.${Cap_MINOR_VERSION}.${Cap_PATCH_VERSION})
MESSAGE("Cap version: ${Cap_VERSION}")

PROJECT(Cap LANGUAGES CXX VERSION
    ${Cap_MAJOR_VERSION}.${Cap_MINOR_VERSION}.${Cap_PATCH_VERSION})

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
#SET(CMAKE_FIND_LIBRARY_PREFIXES "lib")
#SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a;.so;.dylib")

INCLUDE(SetupCompiler)
INCLUDE(SetupTPLs)
INCLUDE(TrackCapRevisionNumber)

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

ADD_SUBDIRECTORY(source)

IF(ENABLE_PYTHON)
    ADD_SUBDIRECTORY(python)
ENDIF()

IF(ENABLE_DOCUMENTATION)
    ADD_SUBDIRECTORY(docs)
ENDIF()

ENABLE_TESTING()
ADD_SUBDIRECTORY(test)

#### OUTDATED ####################################
IF(MAKE_DOC)
    ADD_SUBDIRECTORY(doc-old)
ENDIF()
##################################################

SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)
