INCLUDE(${CMAKE_SOURCE_DIR}/cmake/macros.cmake)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "")
ADD_LIBRARY(pycap MODULE
    python_wrappers.cc
    )

SET_TARGET_PROPERTIES(pycap PROPERTIES 
    PREFIX "_"
    SUFFIX ".so"
    )

TARGET_LINK_LIBRARIES(pycap ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} cap)
IF(ENABLE_DEAL_II)
    TARGET_LINK_LIBRARIES(pycap deal_II)
ENDIF()
IF(ENABLE_GSL)
    TARGET_LINK_LIBRARIES(pycap ${GSL_LIBRARIES})
ENDIF()
INSTALL(TARGETS pycap DESTINATION ${CMAKE_INSTALL_PREFIX}/python/pycap)

SET(PYTHON_SOURCES
    __init__.py
    extra.py
    )
FOREACH(PYTHON_SOURCE ${PYTHON_SOURCES})
    ADD_CUSTOM_COMMAND(
        OUTPUT ${CMAKE_BINARY_DIR}/python/pycap/${PYTHON_SOURCE}
        DEPENDS ${CMAKE_SOURCE_DIR}/python/${PYTHON_SOURCE}
        COMMAND ${CMAKE_COMMAND} 
        ARGS -E copy ${CMAKE_SOURCE_DIR}/python/${PYTHON_SOURCE} ${CMAKE_BINARY_DIR}/python/pycap/${PYTHON_SOURCE}
        COMMENT "Copying ${PYTHON_SOURCE}"
        )
ENDFOREACH()
INSTALL(
    FILES ${PYTHON_SOURCES}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/python/pycap
    )
    

ADD_CAP_PYTHON_TEST(test_python_wrappers)
COPY_CAP_INPUT_FILE(device.xml)
COPY_CAP_INPUT_FILE(eis.xml)
